--- a/adminPage.html
+++ b/adminPage.html
@@ -128,9 +128,10 @@
                     <div id="totalUsers">Total Users : <span id="UserValue"
                             style="font-weight: bold; color: yellow; font-size: 22px;">Load...</span> </div>
                 </div>
-                <div class="Withdrawal">
-                    <button value="WithDrawal" name="Withdrawal" id="WithdrawStatus"
-                        style="font-weight: Bold; cursor: pointer; font-size: 30px; padding: 10px; border-radius: 23px; margin: auto;">WithDrawal</button>
+                <div class="WithdrawalRequests">
+                    <button value="WithdrawalRequests" name="WithdrawalRequests" id="WithdrawalRequestsButton"
+                        style="font-weight: Bold; cursor: pointer; font-size: 30px; padding: 10px; border-radius: 23px; margin: auto;">View
+                        Withdrawal Requests</button>
                 </div>
 
             </div>
@@ -254,8 +255,13 @@
                 document.getElementById('UserValue').textContent = data.totalUsers;
                 console.log(data.totalUsers);
                 document.getElementById('WithdrawStatus').addEventListener('click', () => {
-                    window.location.href='WithdrawAdmin.html';
+                    window.location.href = 'WithdrawAdmin.html';
                 });
+
+                document.getElementById('WithdrawalRequestsButton').addEventListener('click', () => {
+                    window.location.href = 'withdrawalRequests.html';
+                });
+                
             } catch (error) {
                 console.error('Error fetching statistics:', error);
                 alert('Failed to fetch statistics.');
