--- a/adminPage.html
+++ b/adminPage.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="Withdrawal">
                     <button value="WithDrawal" name="Withdrawal" id="WithdrawStatus"
-                        style="font-weight: Bold; cursor: pointer; font-size: 30px; padding: 10px; border-radius: 23px; margin: auto;">WithDrawal</button>
+                        style="font-weight: Bold; cursor: pointer; font-size: 20px; padding: 5px; border-radius: 23px; background-color:rgb(27, 78, 27); color: white;">WithDrawal status</button>
                 </div>
 
             </div>
