--- a/WithdrawAdmin.html
+++ b/WithdrawAdmin.html
@@ -14,6 +14,15 @@
             align-items: center;
             flex-direction: column;
             min-height: 100vh;
+            padding: 20px;
+        }
+
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            max-width: 1200px;
         }
 
         .card {
@@ -22,7 +31,8 @@
             margin: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
+            width: 100%;
+            max-width: 300px;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
@@ -66,12 +76,44 @@
         .reject:hover {
             background-color: #e41e26;
         }
+
+        .spinner {
+            width: 50px;
+            height: 50px;
+            background-color: #333;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -25px;
+            margin-left: -25px;
+            animation: rotate 1.2s infinite linear;
+        }
+
+        @keyframes rotate {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.7);
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 
 <body>
     <h1>Pending Withdrawal Requests</h1>
-    <div id="request-container"></div>
+    <div class="overlay" id="spinner-overlay">
+        <div class="spinner"></div>
+    </div>
+    <div id="request-container" class="card-container"></div>
 
     <script>
         const apiUrl = "https://backend-recent-2.onrender.com";
@@ -108,6 +150,9 @@
 
         async function updateRequestStatus(requestId, action) {
             const url = `${apiUrl}/withdrawal-requests/${action}`;
+            const overlay = document.getElementById('spinner-overlay');
+            overlay.style.display = 'flex';
+
             try {
                 const response = await fetch(url, {
                     method: 'POST',
@@ -122,6 +167,8 @@
                 fetchPendingRequests();
             } catch (error) {
                 console.error(`Error ${action}ing request:`, error);
+            } finally {
+                overlay.style.display = 'none';
             }
         }
 
