--- a/Dashboard.html
+++ b/Dashboard.html
@@ -108,8 +108,8 @@
 
         #ad-close svg {
             fill: white;
-            width: 16px;
-            height: 16px;
+            width: 25px;
+            height: 25px;
         }
 
         #timer {
@@ -120,7 +120,8 @@
             color: white;
             border-radius: 12px;
             padding: 4px 8px;
-            font-size: 12px;
+            font-size: 22px;
+            font-weight: bold;
         }
 
         @keyframes popUp {
