--- a/Dashboard.html
+++ b/Dashboard.html
@@ -93,7 +93,7 @@
             position: absolute;
             top: 8px;
             right: 8px;
-            background: #ff5c5c;
+            background: #ff0000;
             border: none;
             border-radius: 50%;
             width: 24px;
@@ -107,9 +107,10 @@
         }
 
         #ad-close svg {
-            fill: white;
-            width: 25px;
-            height: 25px;
+            fill: rgb(255, 255, 255);
+            width: 30px;
+            font-weight: bold;
+            height: 30px;
         }
 
         #timer {
