--- a/Dashboard.html
+++ b/Dashboard.html
@@ -345,7 +345,7 @@
 
             // Redirect to referral page when the ad image is clicked
             adImage.addEventListener('click', () => {
-                alert('This site Under Working...!!!');
+                window.location.href = 'Adverstiment.html';
             });
 
 
