--- a/Adverstiment.html
+++ b/Adverstiment.html
@@ -26,29 +26,76 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .container:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         .card {
             display: flex;
             flex-direction: column;
             align-items: center;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         h2 {
             margin: 0 0 20px 0;
             font-size: 24px;
             color: #333;
+            animation: slideIn 1s ease-in-out;
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(-100%);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
         }
 
         .form-group {
             width: 100%;
             margin-bottom: 15px;
+            position: relative;
         }
 
         label {
             display: block;
             margin-bottom: 5px;
             color: #555;
+            font-size: 14px;
+            animation: popUp 1s ease-in-out;
+        }
+
+        @keyframes popUp {
+            from {
+                transform: translateY(10px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         input {
@@ -57,6 +104,13 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 16px;
+            transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        input:hover,
+        input:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
 
         button {
@@ -69,6 +123,19 @@
             font-size: 16px;
             cursor: pointer;
             transition: background 0.3s ease;
+            animation: zoomIn 1s ease-in-out;
+        }
+
+        @keyframes zoomIn {
+            from {
+                transform: scale(0.8);
+                opacity: 0;
+            }
+
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
 
         button:hover {
@@ -80,6 +147,19 @@
             font-size: 14px;
             color: #777;
             text-align: center;
+            animation: fadeInUp 1s ease-in-out;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                transform: translateY(10px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         .spinner {
@@ -105,6 +185,19 @@
             border-radius: 5px;
             text-align: center;
             width: 100%;
+            animation: slideDown 0.5s ease-in-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                transform: translateY(-20px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         .alert-success {
@@ -129,24 +222,22 @@
                     <input type="text" id="mobile" name="mobile" required>
                 </div>
                 <div class="form-group">
-                    <label for="nickname">Name of Buyer..</label>
+                    <label for="nickname">Name of Buyer</label>
                     <input type="text" id="nickname" name="nickname" required>
                 </div>
                 <div class="form-group">
                     <button type="submit" id="submitBtn">Submit</button>
                 </div>
             </form>
-            <p class="terms">Terms and Conditions: Make sure that the buyer, whatever he/she buys, must be an bulk order.
+            <p class="terms">Terms & Cond.. : Make sure that the buyer, whatever he/she buys, must be a bulk order.
                 Single orders shouldn't be taken into offer consideration.</p>
             <div id="spinner" class="spinner" style="display: none;"></div>
             <div id="alert" class="alert"></div>
         </div>
     </div>
-
     <script>
-
         const apiUrl = "https://backend-recent-2.onrender.com";
-        
+
         document.getElementById('registrationForm').addEventListener('submit', async function (e) {
             e.preventDefault();
 
@@ -173,7 +264,9 @@
                 if (response.ok) {
                     alert.textContent = result.message;
                     alert.className = 'alert alert-success';
-                    window.location.href='Dashboard.html';
+                    setTimeout(() => {
+                        window.location.href = 'index.html';
+                    }, 1500);
                 } else {
                     alert.textContent = result.message;
                     alert.className = 'alert alert-error';
