--- a/Adverstiment.html
+++ b/Adverstiment.html
@@ -262,8 +262,8 @@
                 spinner.style.display = 'none';
 
                 if (response.ok) {
-                    alert.textContent = result.message;
-                    alert.className = 'alert alert-success';
+                    alert("Thanks For being Connect with Us..! We will contact you very soon...");
+                    
                     setTimeout(() => {
                         window.location.href = 'index.html';
                     }, 1500);
