--- a/Adverstiment.html
+++ b/Adverstiment.html
@@ -262,11 +262,11 @@
                 spinner.style.display = 'none';
 
                 if (response.ok) {
-                    alert("Thanks For being Connect with Us..! We will contact you very soon...");
-                    
+                    alert.textContent = result.message;
+                    alert.className = 'alert alert-success';
                     setTimeout(() => {
                         window.location.href = 'index.html';
-                    }, 1500);
+                    }, 2000);
                 } else {
                     alert.textContent = result.message;
                     alert.className = 'alert alert-error';
