--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="titleLogo.jpg" sizes="16x16" type="image/png">
     <link rel="icon" href="titleLogo.jpg" sizes="32x32" type="image/png">
     <link rel="icon" href="titleLogo.jpg" sizes="64x64" type="image/png">
-    <title>Click & Win</title>
+    <title>Click & Enjoy</title>
 
     <meta property="og:title" content="Click-n-Win" />
     <meta property="og:description" content="Visit & gets Affordable Prizes..." />
@@ -105,7 +105,7 @@
         <div class="contentz">
             <h3 id="typed-text">Your Text Here</h3>
             <h2>"
-                Click to Cash"<br>
+                Click And Visit"<br>
                 <p id="animated-text">Share the joy, under the sky.</p>
             </h2>
             <div>
