--- a/adminPage.html
+++ b/adminPage.html
@@ -39,6 +39,10 @@
                         style="font-weight: Bold; cursor: pointer; font-size: 20px; padding: 5px; border-radius: 23px; background-color:rgb(27, 78, 27); color: white;">WithDrawal status</button>
                 </div>
 
+                <div>
+                    <a href="AdUpload.html" class="nav-link">Ad-Upload</a>
+                </div>
+                
             </div>
             <h2>Admin Dashboard</h2>
             <form id="linkForm" onsubmit="updateLinks(event)">
