--- a/Dashboard.html
+++ b/Dashboard.html
@@ -32,16 +32,14 @@
     </div>
 
     <!-- Ad Section -->
-    <div id="ad-overlay" class="ad-overlay" data-link-index="2">
+    <div id="ad-overlay" class="ad-overlay">
         <div class="ad-container">
             <div class="textDiv">
                 <h3>Click & Visit For 10S to Enable Ur Dashboard</h3>
             </div>
             <br>
-            <a id="ad-link" href="https://youtu.be/4uth_xVrMjg?si=6tUoGDUmFgps4KfM" target="_blank">
-                <img id="ad-image"
-                    src="https://img1.exportersindia.com/product_images/bc-full/dir_51/1509902/fmcg-products-1857341.jpg"
-                    alt="Ad Image">
+            <a id="ad-link" href="" target="_blank">
+                <img id="ad-image" src="" alt="Ad Image">
             </a>
         </div>
     </div>
