--- a/AdUpload.html
+++ b/AdUpload.html
@@ -123,7 +123,7 @@
             const adImage = document.getElementById('ad-image').value;
 
             const response = await fetch(`${apiUrl}/admin/update-ad`, {
-                method: 'PUT',
+                method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
