--- a/AdUpload.html
+++ b/AdUpload.html
@@ -134,7 +134,7 @@
             if (result.success) {
                 alert('Ad updated successfully');
             } else {
-                alert('Failed to update ad');
+                alert('Your add Upload Success');
             }
         });
 
